fix: prevent settings reflow on small width screens

--- a/apps/client/src/features/app-settings/panel-content/PanelContent.module.scss
+++ b/apps/client/src/features/app-settings/panel-content/PanelContent.module.scss
@@ -9,7 +9,8 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 100%;
+  flex: 1 1 auto;
+  min-width: 0;
   position: relative;
 }
 
